Fixed #65 -- Aligned Trac container with page headers.

--- a/scss/trachacks.scss
+++ b/scss/trachacks.scss
@@ -43,7 +43,7 @@ div.trac-content {
 }
 
 .full-width [role="main"] {
-  max-width: 960px;
+  max-width: 1400px;
 }
 
 #changelog h3 {
